--- a/portfolio.html
+++ b/portfolio.html
@@ -80,13 +80,21 @@
           <ul class="works list">
             <li class="works-li">
               <a href="" class="works-link link">
-                <img
-                  src="./images/our-works/banking-app-interface-concept.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                  class="works-img"
-                />
+                <div class="works-list-wraper">
+                  <img
+                    src="./images/our-works/banking-app-interface-concept.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                    class="works-img"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="works-content">
                   <h2 class="works-title">Banking App Interface Concept</h2>
                   <p class="works-text">App</p>
@@ -96,13 +104,20 @@
 
             <li class="works-li">
               <a href="" class="works-link link">
-                <img
-                  src="./images/our-works/cashless-payment.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                  class="works-img"
-                />
+                <div class="works-list-wraper">
+                  <img
+                    src="./images/our-works/cashless-payment.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                    class="works-img"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="works-content">
                   <h2 class="works-title">Cashless Payment</h2>
                   <p class="works-text">Marketing</p>
@@ -112,13 +127,20 @@
 
             <li class="works-li">
               <a href="" class="works-link link">
-                <img
-                  src="./images/our-works/meditaion-app.jpg"
-                  alt="Meditaion App"
-                  width="360"
-                  height="300"
-                  class="works-img"
-                />
+                <div class="works-list-wraper">
+                  <img
+                    src="./images/our-works/meditaion-app.jpg"
+                    alt="Meditaion App"
+                    width="360"
+                    height="300"
+                    class="works-img"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="works-content">
                   <h2 class="works-title">Meditation App</h2>
                   <p class="works-text">App</p>
@@ -128,13 +150,20 @@
 
             <li class="works-li">
               <a href="" class="works-link link">
-                <img
-                  src="./images/our-works/taxi-service.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                  class="works-img"
-                />
+                <div class="works-list-wraper">
+                  <img
+                    src="./images/our-works/taxi-service.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                    class="works-img"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="works-content">
                   <h2 class="works-title">Taxi Service</h2>
                   <p class="works-text">Marketing</p>
@@ -143,14 +172,21 @@
             </li>
             <li class="works-li">
               <a href="" class="works-link link">
-                <img
-                  src="./images/our-works/screen-illustrations.jpg"
-                  alt="Screen
+                <div class="works-list-wraper">
+                  <img
+                    src="./images/our-works/screen-illustrations.jpg"
+                    alt="Screen
               Illustration"
-                  width="360"
-                  height="300"
-                  class="works-img"
-                />
+                    width="360"
+                    height="300"
+                    class="works-img"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="works-content">
                   <h2 class="works-title">Screen Illustrations</h2>
                   <p class="works-text">Design</p>
@@ -160,14 +196,21 @@
 
             <li class="works-li">
               <a href="" class="works-link link">
-                <img
-                  src="./images/our-works/online-courses.jpg"
-                  alt="Online
+                <div class="works-list-wraper">
+                  <img
+                    src="./images/our-works/online-courses.jpg"
+                    alt="Online
               Courses"
-                  width="360"
-                  height="300"
-                  class="works-img"
-                />
+                    width="360"
+                    height="300"
+                    class="works-img"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="works-content">
                   <h2 class="works-title">Online Courses</h2>
                   <p class="works-text">Marketing</p>
@@ -177,13 +220,20 @@
 
             <li class="works-li">
               <a href="" class="works-link link">
-                <img
-                  src="./images/our-works/instagram-stories-concept.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                  class="works-img"
-                />
+                <div class="works-list-wraper">
+                  <img
+                    src="./images/our-works/instagram-stories-concept.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                    class="works-img"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="works-content">
                   <h2 class="works-title">Instagram Stories Concept</h2>
                   <p class="works-text">Design</p>
@@ -193,13 +243,20 @@
 
             <li class="works-li">
               <a href="" class="works-link link">
-                <img
-                  src="./images/our-works/organic-food.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                  class="works-img"
-                />
+                <div class="works-list-wraper">
+                  <img
+                    src="./images/our-works/organic-food.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                    class="works-img"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="works-content">
                   <h2 class="works-title">Organic Food</h2>
                   <p class="works-text">Web Site</p>
@@ -209,13 +266,20 @@
 
             <li class="works-li">
               <a href="" class="works-link link">
-                <img
-                  src="./images/our-works/fresh-coffee.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                  class="works-img"
-                />
+                <div class="works-list-wraper">
+                  <img
+                    src="./images/our-works/fresh-coffee.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                    class="works-img"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="works-content">
                   <h2 class="works-title">Fresh Coffee</h2>
                   <p class="works-text">Web Site</p>
